--- a/blank.html
+++ b/blank.html
@@ -10,19 +10,19 @@
     <header class="page-header">
       <div class="page-header__inner">
         <div class="page-header__top">
-          <a class="page-header__logo">
+          <a class="page-header__logo" href="index.html">
             <img src="img/logo.svg" width="154" height="64" alt="Логотип Глейси">
           </a>
           <nav class="header-nav">
             <ul class="header-nav__list header-nav__list--main">
               <li class="header-nav__item"><a class="header-nav__link" href="catalog.html">Каталог</a>
-                <!-- <ul class="header-nav__submenu">
-                  <li class="header-nav__item-submenu"><a class="header-nav__link-submenu header-nav__link-submenu--new" href="blank.html">Новинки</a></li>
-                  <li class="header-nav__item-submenu"><a class="header-nav__link-submenu" href="blank.html">Сливочное</a></li>
+                <ul class="header-nav__submenu">
+                  <li class="header-nav__item-submenu header-nav__item-submenu--new"><a class="header-nav__link-submenu header-nav__link-submenu--new" href="blank.html">Новинки</a></li>
+                  <li class="header-nav__item-submenu"><a class="header-nav__link-submenu" href="catalog.html">Сливочное</a></li>
                   <li class="header-nav__item-submenu"><a class="header-nav__link-submenu" href="blank.html">Щербеты</a></li>
                   <li class="header-nav__item-submenu"><a class="header-nav__link-submenu" href="blank.html">Фрктовый лед</a></li>
                   <li class="header-nav__item-submenu"><a class="header-nav__link-submenu" href="blank.html">Мелерин</a></li>
-                </ul> -->
+                </ul>
               </li>
               <li class="header-nav__item"><a class="header-nav__link" href="blank.html">Доставка и оплата</a></li>
               <li class="header-nav__item"><a class="header-nav__link" href="blank.html">О компании</a></li>
