--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
           <nav class="header-nav">
             <ul class="header-nav__list header-nav__list--main">
               <li class="header-nav__item"><a class="header-nav__link" href="catalog.html">Каталог</a>
-                <!-- <ul class="header-nav__submenu">
-                  <li class="header-nav__item-submenu"><a class="header-nav__link-submenu header-nav__link-submenu--new" href="blank.html">Новинки</a></li>
-                  <li class="header-nav__item-submenu"><a class="header-nav__link-submenu" href="blank.html">Сливочное</a></li>
+                <ul class="header-nav__submenu">
+                  <li class="header-nav__item-submenu header-nav__item-submenu--new"><a class="header-nav__link-submenu header-nav__link-submenu--new" href="blank.html">Новинки</a></li>
+                  <li class="header-nav__item-submenu"><a class="header-nav__link-submenu" href="catalog.html">Сливочное</a></li>
                   <li class="header-nav__item-submenu"><a class="header-nav__link-submenu" href="blank.html">Щербеты</a></li>
                   <li class="header-nav__item-submenu"><a class="header-nav__link-submenu" href="blank.html">Фрктовый лед</a></li>
                   <li class="header-nav__item-submenu"><a class="header-nav__link-submenu" href="blank.html">Мелерин</a></li>
-                </ul> -->
+                </ul>
               </li>
               <li class="header-nav__item"><a class="header-nav__link" href="blank.html">Доставка и оплата</a></li>
               <li class="header-nav__item"><a class="header-nav__link" href="blank.html">О компании</a></li>
@@ -32,12 +32,30 @@
                 <button class="header-nav__search-btn" type="button" aria-label="Поиск">
                   <svg width="17" height="17" viewBox="0 0 17 17"><path fill="#fff" d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"/></svg>
                 </button>
-                <form class="hidden">
+                <form class="header-nav__search">
                   <input class="header-nav__search-input" type="search" placeholder="крем-брюле">
                 </form>
               </li>
-              <li class="header-nav__item header-nav__item--user header-nav__item--login"><a href="">Вход</a></li>
-              <li class="header-nav__item header-nav__item--user header-nav__item--basket"><a href="">Корзина</a></li>
+              <li class="header-nav__item header-nav__item--user header-nav__item--login"><a class="header-nav__link--user header-nav__link--login" href="">Вход</a>
+                <div class="modal__login">
+                  <form class="login__form" action="https://echo.htmlacademy.ru/" method="post">
+                    <input class="login__input login__input--email" type="email" id="email-user" placeholder="email@example.com" required>
+                    <label for="email-user" aria-label="email"></label>
+                    <input class="login__input login__input--password" type="password" id="password-user" placeholder="......" required>
+                    <label for="password-user" aria-label="пароль"></label>
+                    <button class="btn-submit btn-submit--login" type="submit">Войти</button>
+                    <div class="login__additionally">
+                      <p class="login__link-box">
+                        <a class="login__link login__link--restore-password" href="blank.html">Забыли пароль?</a>
+                      </p>
+                      <p class="login__link-box">
+                        <a class="login__link  login__link--registration" href="blank.html">Новая регистрация</a>
+                      </p>
+                    </div>
+                  </form>
+                </div>
+              </li>
+              <li class="header-nav__item header-nav__item--user header-nav__item--basket"><a class="header-nav__link--user header-nav__link--basket" href="blank.html">Пусто</a></li>
             </ul>
           </nav>
         </div>
@@ -53,7 +71,7 @@
         <h2 class="visually-hidden">Предложения</h2>
         <div class="slider">
           <div class="slider__inner">
-            <div class="slider-slides slide-slides-1">
+            <div class="slider-slides slide-slides-1 modal-show__slider">
               <div class="slide-content">
                 <h3>Крем-брюле и пломбир с малиновым джемом</h3>
                 <a href="blank.html">Давайте оба!</a>
@@ -64,7 +82,7 @@
                   <img src="img/ice-cream-1.png" width="647" height="584" alt="Крем-брюле и пломбир с малиновым джемом">
                 </figure>
             </div>
-            <div class="slider-slides slide-slides-2 hidden">
+            <div class="slider-slides slide-slides-2">
               <div class="slide-content">
                 <h3>Шоколадный пломбир и лимонный сорбет</h3>
                 <a href="blank.html">Давайте оба!</a>
@@ -75,7 +93,7 @@
                   <img src="img/ice-cream-2.png" width="644" height="583" alt="Крем-брюле и пломбир с малиновым джемом">
                 </figure>
             </div>
-            <div class="slider-slides slide-slides-3 hidden">
+            <div class="slider-slides slide-slides-3">
               <div class="slide-content">
                 <h3>Пломбир с помадкой и клубничный щербет</h3>
                 <a href="blank.html">Давайте оба!</a>
@@ -87,11 +105,11 @@
                 </figure>
             </div>
             <div class="slider-controls">
-              <input class="visually-hidden slider-input slider-input-1" type="radio" id="slider-1" name="toggle" checked>
+              <input class="visually-hidden slider-input slider-input-1" type="radio" id="slider-1" name="toggle" onclick="checkSlider()" checked>
               <label class="slider-label slider-label-1" for="slider-1" aria-label="Слайдер1"></label>
-              <input class="visually-hidden slider-input slider-input-2" type="radio" id="slider-2" name="toggle">
+              <input class="visually-hidden slider-input slider-input-2" type="radio" id="slider-2" name="toggle" onclick="checkSlider()">
               <label class="slider-label slider-label-2" for="slider-2" aria-label="Слайдер1"></label>
-              <input class="visually-hidden slider-input slider-input-3" type="radio" id="slider-3" name="toggle">
+              <input class="visually-hidden slider-input slider-input-3" type="radio" id="slider-3" name="toggle" onclick="checkSlider()">
               <label class="slider-label slider-label-3" for="slider-3" aria-label="Слайдер1"></label>
             </div>
           </div>
@@ -105,7 +123,7 @@
           <div class="stock stock-right">
             <h3>Шоколадки даром!</h3>
             <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-            <a class="stock-btn" href="blank.html">Хочу шокладки!</a>
+            <a class="stock-btn" href="blank.html">Хочу шоколадки!</a>
           </div>
         </div>
         <div class="catalog__wrap catalog__wrap--hit">
@@ -113,7 +131,7 @@
             <li class="catalog__item catalog__item--hit">
               <article class="box-catalog__inner box-catalog__inner--hit">
                 <h3 class="catalog-item__title catalog-item__title--hit">Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
-                <p class="catalog-item__price">310 ₽<span>/кг</span></p>
+                <p class="catalog-item__price">310 ₽ <span>/кг</span></p>
                 <div class="catalog-item__img">
                   <img src="img/ice-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
                 </div>
@@ -123,7 +141,7 @@
             <li class="catalog__item catalog__item--hit">
               <article class="box-catalog__inner box-catalog__inner--hit">
                 <h3 class="catalog-item__title catalog-item__title--hit">Сливочно-кофейное с кусочками шоколада</h3>
-                <p class="catalog-item__price">380 ₽<span>/кг</span></p>
+                <p class="catalog-item__price">380 ₽ <span>/кг</span></p>
                 <div class="catalog-item__img">
                   <img src="img/ice-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
                 </div>
@@ -132,8 +150,8 @@
             </li>
             <li class="catalog__item catalog__item--hit">
               <article class="box-catalog__inner box-catalog__inner--hit">
-                <h3 class="catalog-item__title catalog-item__title--hit">Сливочно-клубничное с присыпкой из белого шоколада</h3>
-                <p class="catalog-item__price">355 ₽<span>/кг</span></p>
+                <h3 class="catalog-item__title catalog-item__title--hit">Сливочно-клубничное<br>с присыпкой из белого шоколада</h3>
+                <p class="catalog-item__price">355 ₽ <span>/кг</span></p>
                 <div class="catalog-item__img">
                   <img src="img/ice-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
                 </div>
@@ -142,8 +160,8 @@
             </li>
             <li class="catalog__item catalog__item--hit">
               <article class="box-catalog__inner box-catalog__inner--hit">
-                <h3 class="catalog-item__title catalog-item__title--hit">Сливочное крем-брюле с карамельной подливкой</h3>
-                <p class="catalog-item__price">415 ₽<span>/кг</span></p>
+                <h3 class="catalog-item__title catalog-item__title--hit">Сливочное крем-брюле<br>с карамельной подливкой</h3>
+                <p class="catalog-item__price">415 ₽ <span>/кг</span></p>
                 <div class="catalog-item__img">
                   <img src="img/ice-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
                 </div>
@@ -155,7 +173,7 @@
       </section>
       <div class="info__wrap">
         <section class="info">
-          <h2 class="info__title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного проиводства на развес</h2>
+          <h2 class="info__title">Магазин Глэйси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
           <div class="info__inner">
             <p class="info__text info__text-1">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
             <p class="info__text info__text-2">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
@@ -168,20 +186,23 @@
         <article class="advice">
           <div class="advice__wrap">
             <h3 class="advice__title">Новое в нашем блоге</h3>
-            <a class="advice__link" href="blank.html">10 способов сервировки фруктовых щербетов к столу</a>
+            <a class="advice__link" href="blank.html">10 способов сервировки<br> фруктовых щербетов &nbsp;&nbsp;<br> к столу</a>
           </div>
         </article>
         <div class="subscription">
           <div class="subscription__wrap">
             <p class="subscription__text">Подпишитесь на нашу сладкую рассылку и будьте всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
             <form class="subscription__form" action="https://echo.htmlacademy.ru/" method="post">
-              <input class="subscription__input" type="text" name="email" id="email" placeholder="email@example.com">
-              <button class="subscription__submit" type="submit">Отправить</button>
+              <input class="subscription__input" type="email" name="email" id="email-subscription" placeholder="email@example.com">
+              <label for="email-subscription" aria-label="email"></label>
+              <button class="btn-submit btn-submit--subscription" type="submit">Отправить</button>
             </form>
           </div>
         </div>
       </div>
       <div class="address__wrap">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1591818297017!5m2!1sru!2sru" width="1200" height="430" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <p class="address__map"><img src="img/map.png" width="1200" height="430" alt="ул. Большая Конюшенная, 19/8, Санкт-Петербург"></p>
         <div class="address__inner">
           <div class="address">
             <div class="address__details">
@@ -197,7 +218,7 @@
       </div>
     </main>
     <footer class="footer">
-      <div class="footer__inner">
+      <div class="footer__inner footer__inner--no-border">
         <ul class="footer__socials-list">
           <li class="socials__item"><a class="socials__link" href="blank.html">
             <img src="img/fb.svg" width="32" height="32" alt="Фэйсбук">
@@ -214,8 +235,8 @@
         </ul>
         <ul class="footer__block-group">
           <li class="footer__block-item footer__block-item--favorites"><a href="blank.html">Для поставщиков</a></li>
-          <li class="footer__block-item"><a href="blank.html">О производстве</a></li>
           <li class="footer__block-item"><a href="blank.html">Наши документы</a></li>
+          <li class="footer__block-item"><a href="blank.html">О производстве</a></li>
           <li class="footer__block-item"><a href="blank.html">Экологические стандарты</a></li>
         </ul>
         <div class="footer__copyright">
@@ -226,5 +247,21 @@
         </div>
       </div>
     </footer>
+    <div class="popup__feedback">
+      <h2 class="feedback__title">Мы обязательно вам ответим!</h2>
+      <form class="feedback__form" action="https://echo.htmlacademy.ru/" method="post">
+        <label class="visually-hidden" for="feedback-name">Имя Фамилия</label>
+        <input class="feedback__input feedback__input--name" type="text" name="name" id="feedback-name" placeholder="Имя Фамилия">
+        <label class="visually-hidden" for="feedback-email">Электоронная почта</label>
+        <input class="feedback__input feedback__input--email" type="email" name="email" id="feedback-email" placeholder="email@example.com">
+        <label class="visually-hidden" for="feedback-text">Текст письма</label>
+        <textarea class="feedback__input feedback__input--text" name="text" id="feedback-text" placeholder="В свободной форме"></textarea>
+        <button class="btn-submit btn-submit--feedback" type="submit">Отправить</button>
+      <button class="feedback__close" type="button" aria-label="Закрыть"></button>
+      </form>
+    </div>
+    <script src="js/popup-feedback.js"></script>
+    <script src="js/slider.js"></script>
+    <script src="js/login.js"></script>
   </body>
 </html>
